name:                cardano-sl-binary
version:             1.3.0
synopsis:            Cardano SL - binary serialization
description:         This package defines a type class for binary serialization,
                     helpers and instances.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Binary.Class
                       Pos.Binary.Limit
                       Pos.Binary.SafeCopy

  other-modules:
                       Pos.Binary.Class.Core
                       Pos.Binary.Class.Primitive
                       Pos.Binary.Class.TH

  build-depends:       base
                     , binary
                     , bytestring
                     , canonical-json
                     , cardano-sl-util
                     , cborg
                     , cereal
                     , containers
                     , digest
                     , formatting
                     , hashable
                     , lens
                     , micro-recursion-schemes
                     , mtl
                     , safecopy
                     , safe-exceptions
                     , serokell-util
                     , tagged
                     , template-haskell
                     , text
                     , th-utilities
                     , time-units
                     , universum
                     , unordered-containers
                     , vector

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp


test-suite test
  main-is:             test.hs
  other-modules:
                       Spec
                       Test.Pos.Binary.BiSerialize
                       Test.Pos.Binary.BiSizeBounds
                       Test.Pos.Binary.Cbor.CborSpec
                       Test.Pos.Binary.Helpers
                       Test.Pos.Binary.Helpers.GoldenRoundTrip
                       Test.Pos.Cbor.RefImpl
                       Test.Pos.Cbor.Canonicity

  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , aeson
                     , base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-util-test
                     , cborg
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , directory
                     , file-embed
                     , extra
                     , filepath
                     , filelock
                     , fmt
                     , formatting
                     , generic-arbitrary
                     , half
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , quickcheck-instances
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , tagged
                     , template-haskell
                     , text
                     , formatting
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
