name:                cardano-sl-block
version:             1.3.0
synopsis:            Cardano SL - block processing
description:         Cardano SL - block processing
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                        Pos.Block.BHelpers
                        Pos.Block.BListener
                        Pos.Block.Configuration
                        Pos.Block.Error
                        Pos.Block.Logic
                        Pos.Block.Lrc
                        Pos.Block.Slog
                        Pos.Block.Types

                        Pos.DB.Block
                        Pos.DB.Block.Load

                        Pos.GState.BlockExtra
                        Pos.GState.SanityCheck

                        -- Exposed for tests
                        Pos.Block.Logic.VAR
                        Pos.Block.Logic.Integrity

  other-modules:
                        Pos.Block.Logic.Creation
                        Pos.Block.Logic.Header
                        Pos.Block.Logic.Internal
                        Pos.Block.Logic.Util
                        Pos.Block.Slog.Context
                        Pos.Block.Slog.Logic
                        Pos.Block.Slog.Types

  build-depends:        aeson
                      , aeson-options
                      , base
                      , bytestring
                      , cardano-sl-binary
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-delegation
                      , cardano-sl-lrc
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cardano-sl-util
                      , cborg
                      , conduit
                      , containers
                      , cryptonite
                      , data-default
                      , deepseq
                      , directory
                      , ekg-core
                      , ether
                      , exceptions
                      , filepath
                      , formatting
                      , lens
                      , log-warper
                      , mtl
                      , reflection
                      , rocksdb-haskell-ng
                      , pipes
                      , safe-exceptions
                      , serokell-util
                      , stm
                      , text
                      , formatting
                      , time-units
                      , transformers
                      , universum
                      , unliftio
                      , unordered-containers


  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite test
  main-is:             test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

  other-modules:
                       Spec
                       Test.Pos.Block.Arbitrary
                       Test.Pos.Block.BlockSpec
                       Test.Pos.Block.CborSpec
                       Test.Pos.Block.SafeCopySpec

  build-depends:       base
                     , cardano-sl-binary
                     , cardano-sl-binary-test
                     , cardano-sl-block
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-delegation-test
                     , cardano-sl-ssc-test
                     , cardano-sl-update-test
                     , formatting
                     , generic-arbitrary
                     , hspec
                     , QuickCheck
                     , random
                     , serokell-util >= 0.1.3.4
                     , text
                     , universum >= 0.1.11

  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold


  default-extensions:   NoImplicitPrelude

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark bench-block
  main-is:             Block.hs
  hs-source-dirs:      bench test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0


  other-modules:       Test.Pos.Block.Arbitrary
                       Test.Pos.Block.Arbitrary.Generate

  ghc-options: -O2
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , criterion >= 1.3.0.0
                     , cardano-sl-binary
                     , cardano-sl-block
                     , cardano-sl-crypto
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto-test
                     , cardano-sl-delegation-test
                     , cardano-sl-ssc-test
                     , cardano-sl-update-test
                     , deepseq
                     , formatting
                     , generic-arbitrary
                     , random
                     , text
                     , universum
