name:                cardano-sl-block
version:             1.3.0
synopsis:            Cardano SL - block processing
description:         Cardano SL - block processing
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                        Pos.Block.BHelpers
                        Pos.Block.Configuration
                        Pos.Block.Error
                        Pos.Block.Logic
                        Pos.Block.Slog
                        Pos.Block.Types

                        -- Exposed for tests
                        Pos.Block.Logic.Integrity

  other-modules:
                        Pos.Block.Slog.Types

  build-depends:        aeson
                      , aeson-options
                      , base
                      , cardano-sl-binary
                      , cardano-sl-chain
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-util
                      , cborg
                      , deepseq
                      , ekg-core
                      , ether
                      , formatting
                      , lens
                      , mtl
                      , reflection
                      , safe-exceptions
                      , serokell-util
                      , text
                      , formatting
                      , time-units
                      , universum


  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite test
  main-is:             test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

  other-modules:
                       Spec
                       Test.Pos.Block.Arbitrary
                       Test.Pos.Block.BlockSpec
                       Test.Pos.Block.CborSpec
                       Test.Pos.Block.SafeCopySpec

  build-depends:       base
                     , cardano-sl-binary
                     , cardano-sl-binary-test
                     , cardano-sl-block
                     , cardano-sl-chain-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , formatting
                     , generic-arbitrary
                     , hspec
                     , QuickCheck
                     , random
                     , serokell-util >= 0.1.3.4
                     , text
                     , universum >= 0.1.11

  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold


  default-extensions:   NoImplicitPrelude

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark bench-block
  main-is:             Block.hs
  hs-source-dirs:      bench test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0


  other-modules:       Test.Pos.Block.Arbitrary
                       Test.Pos.Block.Arbitrary.Generate

  ghc-options: -O2
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , criterion >= 1.3.0.0
                     , cardano-sl-binary
                     , cardano-sl-block
                     , cardano-sl-chain-test
                     , cardano-sl-crypto
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto-test
                     , deepseq
                     , formatting
                     , generic-arbitrary
                     , random
                     , text
                     , universum
