name:                cardano-sl-block
version:             1.3.1
synopsis:            Cardano SL - block processing
description:         Cardano SL - block processing
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                        Pos.Block.BHelpers
                        Pos.Block.BListener
                        Pos.Block.BlockWorkMode
                        Pos.Block.Configuration
                        Pos.Block.Error
                        Pos.Block.Logic
                        Pos.Block.Lrc
                        Pos.Block.RetrievalQueue
                        Pos.Block.Slog
                        Pos.Block.Types

                        Pos.Block.Network
                        Pos.Block.Network.Logic
                        Pos.Block.Network.Retrieval
                        Pos.Block.Network.Types

                        Pos.DB.Block
                        Pos.DB.Block.Load

                        Pos.GState.BlockExtra
                        Pos.GState.SanityCheck

                        -- Binary serialization
                        Pos.Binary.Block.Types
                        Pos.Binary.Block.Network

                        -- Exposed for tests
                        Pos.Block.Logic.VAR
                        Pos.Block.Logic.Integrity

                        Pos.Block.Worker

  other-modules:
                        Pos.Block.Logic.Creation
                        Pos.Block.Logic.Header
                        Pos.Block.Logic.Internal
                        Pos.Block.Logic.Util
                        Pos.Block.Slog.Context
                        Pos.Block.Slog.Logic
                        Pos.Block.Slog.Types

  build-depends:        aeson
                      , base
                      , bytestring
                      , cardano-sl-binary
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-delegation
                      , cardano-sl-infra
                      , cardano-sl-lrc
                      , cardano-sl-networking
                      , cardano-sl-ssc
                      , cardano-sl-txp
                      , cardano-sl-update
                      , cardano-sl-util
                      , cborg
                      , conduit
                      , containers
                      , cryptonite
                      , data-default
                      , directory
                      , ekg-core
                      , ether
                      , exceptions
                      , filepath
                      , formatting
                      , lens
                      , log-warper
                      , mtl
                      , random
                      , reflection
                      , rocksdb-haskell-ng
                      , pipes
                      , safe-exceptions
                      , serokell-util
                      , stm
                      , text
                      , text-format
                      , time-units
                      , transformers
                      , universum
                      , unliftio
                      , unordered-containers


  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        MonadFailDesugaring

  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
