name:                cardano-sl-chain
version:             1.3.0
synopsis:            Cardano SL - transaction processing
description:         Cardano SL - transaction processing
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Pos.Chain.Lrc
                       Pos.Chain.Security
                       Pos.Chain.Ssc
                       Pos.Chain.Script
                       Pos.Chain.Script.Examples
                       Pos.Chain.Txp

  other-modules:
                       Pos.Chain.Txp.Configuration
                       Pos.Chain.Txp.Base
                       Pos.Chain.Txp.Error
                       Pos.Chain.Txp.Topsort
                       Pos.Chain.Txp.GenesisUtxo
                       Pos.Chain.Txp.Toil
                       Pos.Chain.Txp.Toil.Failure
                       Pos.Chain.Txp.Toil.Logic
                       Pos.Chain.Txp.Toil.Monad
                       Pos.Chain.Txp.Toil.Stakes
                       Pos.Chain.Txp.Toil.Types
                       Pos.Chain.Txp.Toil.Utxo
                       Pos.Chain.Txp.Toil.Utxo.Functions
                       Pos.Chain.Txp.Toil.Utxo.Util

                       Pos.Chain.Lrc.Fts
                       Pos.Chain.Lrc.Types
                       Pos.Chain.Lrc.Error
                       Pos.Chain.Lrc.Core
                       Pos.Chain.Lrc.Genesis
                       Pos.Chain.Lrc.RichmenComponent

                       Pos.Chain.Security.Params
                       Pos.Chain.Security.Util

                       Pos.Chain.Ssc.Base
                       Pos.Chain.Ssc.Error
                       Pos.Chain.Ssc.Error.Seed
                       Pos.Chain.Ssc.Error.Verify
                       Pos.Chain.Ssc.Types
                       Pos.Chain.Ssc.Message
                       Pos.Chain.Ssc.Mem
                       Pos.Chain.Ssc.Functions
                       Pos.Chain.Ssc.VssCertData
                       Pos.Chain.Ssc.Seed
                       Pos.Chain.Ssc.Configuration
                       Pos.Chain.Ssc.Behavior
                       Pos.Chain.Ssc.Shares
                       Pos.Chain.Ssc.Toss
                       Pos.Chain.Ssc.Toss.Logic
                       Pos.Chain.Ssc.Toss.Pure
                       Pos.Chain.Ssc.Toss.Base
                       Pos.Chain.Ssc.Toss.Class
                       Pos.Chain.Ssc.Toss.Trans
                       Pos.Chain.Ssc.Toss.Types


  build-depends:       aeson
                     , aeson-options
                     , array
                     , base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , conduit
                     , containers
                     , cryptonite
                     , data-default
                     , ether
                     , exceptions
                     , fmt >= 0.4
                     , formatting
                     , free
                     , hashable
                     , lens
                     , log-warper
                     , memory
                     , mtl
                     , mmorph
                     , mono-traversable
                     , neat-interpolation
                     , parsec
                     , plutus-prototype
                     , safe-exceptions
                     , serokell-util
                     , reflection
                     , template-haskell
                     , text
                     , time-units
                     , formatting
                     , transformers
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs

  other-modules:       Spec
                       Test.Pos.Chain.Txp.CoreSpec
                       Test.Pos.Chain.Txp.Toil.UtxoSpec
                       Test.Pos.Chain.Lrc.FtsSpec
                       Test.Pos.Chain.Ssc.Gen
                       Test.Pos.Chain.Ssc.Json

  build-depends:       base
                     , bytestring
                     , cardano-crypto
                     , cardano-sl-binary-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-chain
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , containers
                     , fmt
                     , hedgehog
                     , hspec
                     , lens
                     , mtl
                     , QuickCheck
                     , serokell-util
                     , formatting
                     , universum
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
